Fix PROD4POD-616 - smargin in stories scrollbar

--- a/features/polyExplorer/src/styles.css
+++ b/features/polyExplorer/src/styles.css
@@ -80,3 +80,7 @@ a {
     z-index: 2;
     height: 38px;
 }
+
+::-webkit-scrollbar-track {
+    margin-top: 64px;
+}
